# sgng

./: CMakeLists.txt
cmake-modules/: LibFindMacros.cmake  WarningLevels.cmake
surface-reconstruction/: CMakeLists.txt  LICENSE  surface-reconstruction.cfg.in
surface-reconstruction/src/: adjacency.h  container.h  data_types.h  edge.h  input_adapter.cc  input_adapter.h  main.cc  octree.h  octree_node.h  point.h  point_cloud.h  program_options.cc  program_options.h  reconstruction_worker.cc  reconstruction_worker.h  surface_reconstruction.cc  surface_reconstruction.h  texture.cc  texture.h  texture_coordinate.cc  texture_coordinate.h  textures.cc  textures.h  triangle.h  triangle_mesh.cc  triangle_mesh.h  vertex.h
surface-reconstruction/src/io/: data_storage.h  ply_writer.cc  ply_writer.h  triangle_mesh_file.cc  triangle_mesh_file.h  triangle_obj_file.cc  triangle_obj_file.h
surface-reconstruction/test/: CMakeLists.txt  main.cc  octree_test.cc  texture_test.cc  triangle_mesh_test.cc
